# spellGen

./: CMakeLists.txt  main.cpp  preference.cpp  preference.h  spell.cpp  spell.h  spellselector.cpp  spellselector.h
preferences/: elementpreference.cpp  elementpreference.h  evilpreference.cpp  evilpreference.h  powerpreference.cpp  powerpreference.h  rolepreference.cpp  rolepreference.h  schoolpreference.cpp  schoolpreference.h
spell lists/: druid
